--- a/loja.html
+++ b/loja.html
@@ -1,10 +1,57 @@
+<!--
+_______________________________________________________
+Centro Federal de Educação Tecnológica de Minas Gerais
+Programação WEB: Atividade Plantas Carnívoras
+Alunas: Daniele Lima, Daniela Lourenço
+_______________________________________________________
+-->
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Loja</title>
+    <link rel="stylesheet" href="estilos.css">
   </head>
   <body>
+    <h1><strong>Loja de Sementes</strong></h1>
 
+    <table class="table">
+    <tr>
+      <th colspan="4">Sementes</th>
+    </tr>
+    <tr>
+      <th>Espécie</th>
+      <th>Dificuldade <br/> de Germinação</th>
+      <th>Sementes <br/> por Pacote</th>
+      <th>Preços <br/> (mangos)</th>
+    </tr>
+    <tr>
+      <td><i>Drosera dielsiana</i></td>
+      <td>fácil</td>
+      <td>30</td>
+      <td>R$ 2,00</td>
+    </tr>
+    <tr>
+      <td><i>Serracenia hibrido</i></td>
+      <td>média<br /> semear no inverno</td>
+      <td>10</td>
+      <td>R$ 3,00</td>
+    </tr>
+    <tr>
+      <td><i>Drosera nidiformis</i></td>
+      <td>média</td>
+      <td>15</td>
+      <td>R$ 2,00</td>
+    </tr>
+    </table>
+
+    <p>
+    Caso queira fazer um pedido, envie um email para
+    <a href="mailto:custodio@plantascarnivoras.com.br"
+    target="_top">custodio@plantascarnivoras.com.br</a>
+    </p>
+    <p>
+    Voltar para a <a href="plantas.html">página de plantas</a>.
+    </p>
   </body>
 </html>
